--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
     	<artifactId>slf4j-log4j12</artifactId>
     	<version>${slf4j-version}</version>
     </dependency>
+    <dependency>
+    	<groupId>postgresql</groupId>
+    	<artifactId>postgresql</artifactId>
+    	<version>9.1-901-1.jdbc4</version>
+    </dependency>
 	<dependency>
 		<groupId>org.hamcrest</groupId>
 		<artifactId>hamcrest-library</artifactId>
