--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,18 @@
     		</exclusion>
     	</exclusions>
     </dependency>
+    <dependency>
+    	<groupId>com.oracle</groupId>
+    	<artifactId>ojdbc6</artifactId>
+    	<version>11.2.0.3</version>
+    	<scope>provided</scope>
+    </dependency>
+    <dependency>
+    	<groupId>postgresql</groupId>
+    	<artifactId>postgresql</artifactId>
+    	<version>9.1-901.jdbc4</version>
+    	<scope>provided</scope>
+    </dependency>
   </dependencies>
 
 </project>
