--- a/src/java/META-INF/db.properties
+++ b/src/java/META-INF/db.properties
@@ -1,19 +1,19 @@
 # Properties file with JDBC-related settings.
 
 # PostgreSQL
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql:TEST_SPRING_JDBC
-jdbc.username=dba
-jdbc.password=dba
-jdbc.testquery=SELECT 1
+#jdbc.driverClassName=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql:TEST_SPRING_JDBC
+#jdbc.username=dba
+#jdbc.password=dba
+#jdbc.testquery=SELECT 1
 
 # Oracle
 # SSH: ssh -p 2222 oracle@localhost
 # Passwort: oracle
 # Portweiterleitung in VBox: 22-->2222 und 1521-->1521
 # Oracle-Parameter: SID orcl, Port 1521
-#jdbc.driverClassName=oracle.jdbc.OracleDriver
-#jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
-#jdbc.username=hr
-#jdbc.password=orcale
-#jdbc.testquery=SELECT 1 FROM dual
+jdbc.driverClassName=oracle.jdbc.OracleDriver
+jdbc.url=jdbc:oracle:thin:@//localhost:1521/orcl
+jdbc.username=HR
+jdbc.password=ORACLE
+jdbc.testquery=SELECT 1 FROM dual
