--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
     <dependency>
     	<groupId>postgresql</groupId>
     	<artifactId>postgresql</artifactId>
-    	<version>9.1-901.jdbc4</version>
+    	<version>9.1-901-1.jdbc4</version>
     	<scope>provided</scope>
     </dependency>
   </dependencies>
