--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <organization>
   	<name>Frank W. Rahn</name>
-  	<url>http://www.frank-rahn.de</url>
+  	<url>https://www.frank-rahn.de/</url>
   </organization>
 
   <scm>
